--- a/webapp/ui/login.html
+++ b/webapp/ui/login.html
@@ -23,7 +23,7 @@
 <p class="<?= $message['class']; ?>"><?= $message['details']; ?></p>
 
 <form name="login" method="post">
-    <label for="email" class="sr-only">Email:</label> <input type="text" name="email" id="email" class="form-control" placeholder="Email" />
+    <label for="email" class="sr-only">Email:</label> <input type="text" name="email" id="email" class="form-control" placeholder="Email" value="<?php $email = Base::instance()->get('user_email'); echo $email ? $email : ''; ?>" />
 
     <label for="password" class="sr-only">Password:</label> <input type="password" name="password" id="password" class="form-control" placeholder="Password" />
 
