session logic added

--- a/webapp/ui/layout.html
+++ b/webapp/ui/layout.html
@@ -5,7 +5,7 @@
 		<title>ODR Test</title>
 		<base href="<?php echo $SCHEME.'://'.$HOST.':'.$PORT.$BASE.'/'; ?>" />
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/ui/css/bootstrap.css">
 		<link rel="stylesheet" href="/ui/css/style.css">
 	</head>
 	<body>
