started adding more sql

--- a/webapp/ui/home.html
+++ b/webapp/ui/home.html
@@ -1,5 +1,41 @@
 <h1>Home</h1>
 
 <p>
-    Hello, logged in user. <a href="/logout">Logout</a>
+    Hello, logged in user. <a href="/logout">Logout</a> @TODO - make this a menu!
 </p>
+
+<p>
+    Below is an example dashboard page for when a Dispute is selected.
+</p>
+
+<div class="row">
+    <div class="col-sm-4 dispute__option dispute__option--communication">
+        <img src="/ui/images/mail.png" alt="Mail icon" />
+        Communication
+    </div>
+
+    <div class="col-sm-4 dispute__option dispute__option--communication">
+        <img src="/ui/images/mail.png" alt="Mail icon" />
+        Propose Resolution
+    </div>
+
+    <div class="col-sm-4 dispute__option dispute__option--communication">
+        <img src="/ui/images/mail.png" alt="Mail icon" />
+        Propose Mediation
+    </div>
+
+    <div class="col-sm-4 dispute__option dispute__option--communication">
+        <img src="/ui/images/mail.png" alt="Mail icon" />
+        Renegotiate Dispute Lifespan
+    </div>
+
+    <div class="col-sm-4 dispute__option dispute__option--communication">
+        <img src="/ui/images/mail.png" alt="Mail icon" />
+        Something else
+    </div>
+
+    <div class="col-sm-4 dispute__option dispute__option--communication">
+        <img src="/ui/images/mail.png" alt="Mail icon" />
+        Something else
+    </div>
+</div>
