started abstracting out the account details logic

--- a/webapp/ui/register.html
+++ b/webapp/ui/register.html
@@ -31,13 +31,13 @@
     </div>
 
     <div class="col-lg-6">
-        <label for="company_name" class="sr-only">Company Name:</label> <input type="text" name="company_name" id="company_name" class="form-control" placeholder="Company Name" />
+        <label for="organisation_name" class="sr-only">Organisation Name:</label> <input type="text" name="organisation_name" id="organisation_name" class="form-control" placeholder="Organisation Name" />
 
         <div class="col-lg-4">
-            <label for="company_type">Company Type:</label>
+            <label for="organisation_type">Organisation Type:</label>
         </div>
         <div class="col-lg-8">
-            <select name="company_type" id="company_type" class="form-control">
+            <select name="organisation_type" id="organisation_type" class="form-control">
                 <option value="law_firm">Law Firm</option>
                 <option value="mediation_centre">Mediation Centre</option>
             </select>
