--- a/webapp/ui/index.html
+++ b/webapp/ui/index.html
@@ -1,9 +1,19 @@
-<h1>Smart Online Dispute Resolution</h1>
+<div class="row">
+    <div class="col-sm-12">
+        <h2>Low cost, fast turnaround, satisfactory resolutions</h2>
 
-<p>
-	Landing page.
-</p>
+        <p>
+            Lorem ipsum tacet idet macium faure genuit. Incantate multum parve tuum forte viscus terriere consuit fantos. Lorem ipsum tacet idet macium faure genuit. Incantate multum parve tuum forte viscus terriere consuit fantos.
+        </p>
 
-<p>
-    <a href="/login">Login</a> | <a href="/register">Register</a>
-</p>
+        <h2>Smart resolutions</h2>
+
+        <p>
+            What makes SmartResolution different to other ODR platforms? Smart resolutions. SmartResolution will carefully examine the details of your dispute, retrieve historically similar cases, and run a court simulation to predict who might be better off should the case go to court.
+        </p>
+
+        <p>
+            The SmartResolution business logic is currently only available to mediators if your dispute requires mediation. As it improves, it may be more appropriate to introduce this AI at an earlier point, for both agents to see.
+        </p>
+    </div>
+</div>
