--- a/webapp/ui/home_organisation.html
+++ b/webapp/ui/home_organisation.html
@@ -1,17 +1,19 @@
 <h1>Home</h1>
 
 <p>
-    <strong>Hello</strong>. Your account type is: <?php echo isset($account) ? get_class($account) : 'unknown'; ?>.
+    <strong>Hello</strong>. Your account type is: <?php echo get_class($account); ?>.
 </p>
 
 <p>
-    Below is an example dashboard page for when a Dispute is selected.
+    Below is an example dashboard page.
 </p>
 
 <div class="row">
     <div class="col-sm-4 dispute__option dispute__option--communication">
-        <img src="/ui/images/mail.png" alt="Mail icon" />
-        Communication
+        <a href="/register/individual">
+            <img src="/ui/images/mail.png" alt="Mail icon" />
+            Register <?php echo $account instanceof LawFirm ? 'Agent' : 'Mediator'; ?> account
+        </a>
     </div>
 
     <div class="col-sm-4 dispute__option dispute__option--communication">
