getting prepared to add dispute feature

--- a/webapp/ui/layout.html
+++ b/webapp/ui/layout.html
@@ -11,10 +11,8 @@
 	<body>
 		<header class="container">
 			<div class="col-sm-6">
-			    <a href="/">
-			    	<img class="logo" src="ui/images/logo.png">
-			    </a>
-			    Alpha version <?php echo $VERSION; ?>
+			    <a href="/"><img class="logo" src="ui/images/logo.png"></a>
+			    Alpha version <?php //echo $VERSION; ?>
 			</div>
 
 		    <div class="col-sm-6 alignright">
