--- a/webapp/ui/dispute_new.html
+++ b/webapp/ui/dispute_new.html
@@ -1,1 +1,38 @@
-<p>Coming soon.</p>
+<h1>Create Dispute</h1>
+
+<form name="dispute" method="post">
+    <div class="col-lg-12">
+        <label for="title">Dispute title:</label>
+        <input type="text" name="title" id="title" class="form-control" placeholder="e.g. Smith vs Jones" />
+    </div>
+
+    <div class="col-lg-4">
+        <label for="dispute_type">Agent overseeing Dispute:</label>
+    </div>
+    <div class="col-lg-8">
+        <select name="dispute_type" id="dispute_type" class="form-control">
+            <option value="---">Select an Agent:</option>
+            <?php
+                foreach($agents as $agent) {
+                    echo '<option value="' . $agent->getLoginId() . '">' . $agent->getName() . '</option>';
+                }
+            ?>
+        </select>
+    </div>
+
+    <div class="col-lg-4">
+        <label for="dispute_type">Dispute type:</label>
+    </div>
+    <div class="col-lg-8">
+        <!-- @TODO - populate from installed plugins -->
+        <select name="dispute_type" id="dispute_type" class="form-control">
+            <option value="---">Select a Dispute type:</option>
+            <option value="mediation_centre">Maritime Collision</option>
+            <option value="mediation_centre">Simple Test</option>
+        </select>
+    </div>
+
+    <div class="col-lg-12">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Create Dispute</button>
+    </div>
+</form>
