--- a/webapp/ui/dispute_new.html
+++ b/webapp/ui/dispute_new.html
@@ -1,5 +1,21 @@
 <h1>Create Dispute</h1>
 
+<?php
+    if (Base::instance()->get('error_message')) {
+        $message = array(
+            'class'   => 'bg-padded bg-danger',
+            'details' => Base::instance()->get('error_message')
+        );
+    }
+    else {
+        $message = array(
+            'class'   => 'bg-padded bg-info',
+            'details' => 'Create a dispute by filling in the form.'
+        );
+    }
+?>
+<p class="<?= $message['class']; ?>"><?= $message['details']; ?></p>
+
 <form name="dispute" method="post">
     <div class="col-lg-12">
         <label for="title">Dispute title:</label>
@@ -7,10 +23,10 @@
     </div>
 
     <div class="col-lg-4">
-        <label for="dispute_type">Agent overseeing Dispute:</label>
+        <label for="agent">Agent overseeing Dispute:</label>
     </div>
     <div class="col-lg-8">
-        <select name="dispute_type" id="dispute_type" class="form-control">
+        <select name="agent" id="agent" class="form-control">
             <option value="---">Select an Agent:</option>
             <?php
                 foreach($agents as $agent) {
@@ -21,10 +37,10 @@
     </div>
 
     <div class="col-lg-4">
-        <label for="dispute_type">Dispute type:</label>
+        <label for="type">Dispute type:</label>
     </div>
     <div class="col-lg-8">
-        <select name="dispute_type" id="dispute_type" class="form-control">
+        <select name="type" id="type" class="form-control">
             <option value="---">Select a Dispute type:</option>
             <?php
                 foreach($modules as $module) {
