--- a/webapp/ui/dispute_view--single.html
+++ b/webapp/ui/dispute_view--single.html
@@ -1,3 +1,12 @@
-<h1><?php echo $dispute->getTitle(); ?></h1>
+<h1>Dispute</h1>
 
-<p>More stuff will appear here soon.</p>
+<h2><?php echo $dispute->getTitle(); ?></h2>
+
+<p>
+    Initiatiated by company: <?php echo $dispute->getLawFirmA()->getName(); ?>, represented by <?php echo $dispute->getAgentA()->getName(); ?>
+</p>
+<p>
+    Initiated against company: <?php echo $dispute->getLawFirmB()->getName(); ?>, represented by <?php echo $dispute->getAgentB()->getName(); ?>
+</p>
+
+<?php echo $this->render('dashboard.html'); ?>
